--- a/scss/blocks/_solutions.scss
+++ b/scss/blocks/_solutions.scss
@@ -11,10 +11,10 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 30px;
+    justify-items: center;
     .card{
-        position:relative;
-        width: 287px;
-        height: 229px;
+        position: relative;
+        min-height: 229px;
         padding: 50px 20px 0 40px;
         box-shadow: 0px 10px 40px rgba(18, 18, 18, 0.1);
         border-radius: 0px 0px 10px 10px;
