--- a/scss/blocks/_find.scss
+++ b/scss/blocks/_find.scss
@@ -1,6 +1,7 @@
 .find{
-    padding-top: 80px;
-    height: 670px;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    min-height: 670px;
     position: relative;
 }
 // Content section
@@ -40,74 +41,72 @@
     }
 }
 // Image section
-.find-row{
-    .find-row-right{
-        position:absolute;
+.find-row-right{
+    position:absolute;
+    bottom:0;
+    right: 50%;
+    transform: translateX(50%);
+    max-width: 1920px;
+    width: 100%;
+    height: 100%;
+    .find-image-person{
+        position: absolute;
+        right: 150px;
         bottom:0;
-        right: 50%;
-        transform: translateX(50%);
-        max-width: 1920px;
+        max-width: 516px;
         width: 100%;
-        height: 100%;
-        .find-image-person{
-            position: absolute;
-            right: 150px;
-            bottom:0;
-            max-width: 516px;
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-            z-index:2;
+        height: auto;
+        object-fit: cover;
+        z-index:2;
+    }
+    .find-image-bg{
+        position: absolute;
+        right: -50px;
+        bottom:0;
+        object-fit: cover;
+        z-index:1;
+    }
+    .find-image-card{
+        z-index: 3;
+        position:absolute;
+        bottom: 250px;
+        right: 580px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 18px 30px;
+        background-color: $white;
+        border-radius: 10px;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        .card-title{
+            margin-bottom: 20px;
+            p{
+                font-weight: 700;
+            }
+            p+p{
+                margin-top: 0;
+                color: $grey;
+                font-weight: 400;
+                font-size: 12px;
+            }
         }
-        .find-image-bg{
-            position: absolute;
-            right: -50px;
-            bottom:0;
-            object-fit: cover;
-            z-index:1;
-        }
-        .find-image-card{
-            z-index: 3;
-            position:absolute;
-            bottom: 250px;
-            right: 600px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 18px 30px;
-            background-color: $white;
-            border-radius: 10px;
-            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-            .card-title{
+        .card-content{
+            margin-bottom: 20px;
+            &-doctor{
+                display: flex;
+                align-items: center;
                 margin-bottom: 20px;
-                p{
+                img{
+                    margin-right: 14px;
+                }
+                .doctor-title{
                     font-weight: 700;
                 }
-                p+p{
+                .doctor-spec{
                     margin-top: 0;
                     color: $grey;
-                    font-weight: 400;
                     font-size: 12px;
-                }
-            }
-            .card-content{
-                margin-bottom: 20px;
-                &-doctor{
-                    display: flex;
-                    align-items: center;
-                    margin-bottom: 20px;
-                    img{
-                        margin-right: 14px;
-                    }
-                    .doctor-title{
-                        font-weight: 700;
-                    }
-                    .doctor-spec{
-                        margin-top: 0;
-                        color: $grey;
-                        font-size: 12px;
-                    }
                 }
             }
         }
