--- a/css/styles.css
+++ b/css/styles.css
@@ -706,7 +706,6 @@ a.second-card-btn:hover {
 .rating-cards .card {
   position: relative;
   text-align: center;
-  width: 287px;
   height: 190px;
   padding: 50px 80px 0;
   -webkit-box-shadow: 0px 10px 40px rgba(18, 18, 18, 0.1);
@@ -951,7 +950,7 @@ a.second-card-btn:hover {
             justify-content: center;
   }
   /* Schedule Sections */
-  .schedule.row .schedule-left {
+  .schedule-left {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1003,6 +1002,22 @@ a.second-card-btn:hover {
   .schedule-row .schedule-left {
     display: none;
   }
+  /* Rating Sections */
+  .rating-cards {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+    row-gap: 30px;
+    -webkit-box-pack: unset;
+        -ms-flex-pack: unset;
+            justify-content: unset;
+  }
+  .rating-cards .card:nth-child(3) {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -1045,6 +1060,19 @@ a.second-card-btn:hover {
   .schedule {
     padding-top: 40px;
   }
+  /* Rating Sections */
+  .rating {
+    padding-top: 40px;
+  }
+  .rating-cards {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
+  }
+  .rating-cards .card:nth-child(3) {
+    grid-column: unset;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -1056,6 +1084,11 @@ a.second-card-btn:hover {
         grid-template-rows: repeat(4, 1fr);
     -webkit-column-gap: unset;
             column-gap: unset;
+  }
+  /* Rating Sections */
+  .rating-header {
+    width: 100%;
+    margin: unset;
   }
 }
 
@@ -1070,6 +1103,10 @@ a.second-card-btn:hover {
   }
   /* Schedule Sections */
   .schedule-row .schedule-right .title {
+    font-size: 32px;
+  }
+  /* Rating Sections */
+  .rating-header .title {
     font-size: 32px;
   }
 }
@@ -1105,5 +1142,12 @@ a.second-card-btn:hover {
   }
   .schedule-row .schedule-right .schedule-list {
     text-align: center;
+  }
+  /* Rating Sections */
+  .rating-cards .card {
+    padding: 50px 0 0;
+  }
+  .rating-header .title {
+    font-size: 26px;
   }
 }
