--- a/css/styles.css
+++ b/css/styles.css
@@ -820,6 +820,17 @@ a.second-card-btn:hover {
   color: #696969;
 }
 
+.feedback-content .feedback-right .slide .person-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
 .feedback-content .feedback-right .slide .person-slide .arrow-left,
 .feedback-content .feedback-right .slide .person-slide .arrow-right {
   cursor: pointer;
@@ -958,6 +969,10 @@ a.second-card-btn:hover {
         -ms-flex-align: center;
             align-items: center;
   }
+  /* Feedback Sections */
+  .feedback-content .feedback-right {
+    margin-left: 50px;
+  }
 }
 
 @media only screen and (max-width: 1153px) {
@@ -1018,6 +1033,28 @@ a.second-card-btn:hover {
     -ms-grid-column-span: 2;
     grid-column: 1/3;
   }
+  /* Feedback Sections */
+  .feedback-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .feedback-content::before {
+    top: -50px;
+    right: -100px;
+    width: 1500%;
+    height: 95%;
+  }
+  .feedback-content .feedback-right {
+    margin-left: 0;
+  }
+  .feedback-content .feedback-right .slide {
+    margin-top: 50px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -1073,6 +1110,13 @@ a.second-card-btn:hover {
   .rating-cards .card:nth-child(3) {
     grid-column: unset;
   }
+  /* Feedback Sections */
+  .feedback {
+    margin-top: 40px;
+  }
+  .feedback-content .feedback-right .person-text {
+    max-width: unset;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -1108,6 +1152,22 @@ a.second-card-btn:hover {
   /* Rating Sections */
   .rating-header .title {
     font-size: 32px;
+  }
+  /* Feedback Sections */
+  .feedback-header .title {
+    font-size: 32px;
+  }
+  .feedback-content .feedback-right .person-text p {
+    font-size: 18px;
+  }
+  .feedback-content .feedback-right .slide .person-name {
+    margin-right: 10px;
+  }
+  .feedback-content .feedback-right .slide .person-name h2 {
+    font-size: 16px;
+  }
+  .feedback-content .feedback-right .slide .person-name p {
+    font-size: 14px;
   }
 }
 
@@ -1149,5 +1209,12 @@ a.second-card-btn:hover {
   }
   .rating-header .title {
     font-size: 26px;
+  }
+  /* Feedback Sections */
+  .feedback-header .title {
+    font-size: 26px;
+  }
+  .feedback-content .feedback-right .slide .person-slide {
+    display: none;
   }
 }
