--- a/css/styles.css
+++ b/css/styles.css
@@ -973,6 +973,22 @@ a.second-card-btn:hover {
   .feedback-content .feedback-right {
     margin-left: 50px;
   }
+  /* Footer Sections */
+  .footer {
+    margin-top: 150px;
+  }
+  .footer-right .footer-block:last-child .social-media {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 @media only screen and (max-width: 1153px) {
@@ -1055,6 +1071,23 @@ a.second-card-btn:hover {
   .feedback-content .feedback-right .slide {
     margin-top: 50px;
   }
+  /* Footer Sections */
+  .footer-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer-right {
+    margin-left: 0;
+    margin-top: 50px;
+  }
+  .footer-right .footer-block:last-child .social-media {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -1116,6 +1149,18 @@ a.second-card-btn:hover {
   }
   .feedback-content .feedback-right .person-text {
     max-width: unset;
+  }
+  /* Footer Sections */
+  .footer {
+    margin-top: 100px;
+    margin-bottom: 50px;
+  }
+  .footer-right {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+    row-gap: 50px;
   }
 }
 
@@ -1216,5 +1261,21 @@ a.second-card-btn:hover {
   }
   .feedback-content .feedback-right .slide .person-slide {
     display: none;
+  }
+  /* Footer Sections */
+  .footer-left {
+    text-align: center;
+  }
+  .footer-right {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    -ms-grid-rows: (1fr)[4];
+        grid-template-rows: repeat(4, 1fr);
+    text-align: center;
+  }
+  .footer-right .footer-block:last-child .social-media {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
