--- a/scss/blocks/_home.scss
+++ b/scss/blocks/_home.scss
@@ -1,6 +1,7 @@
 .home{
     position: relative;
     min-height: 590px;
+    margin-top: 80px;
     padding-top: 75px;
     padding-bottom: 75px;
 }
