--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,7 @@
 @import "./global";
 
 @import "./blocks/header";
+@import "./blocks/mobile-nav";
 @import "./blocks/home";
 @import "./blocks/solutions";
 @import "./blocks/find";
