--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
   font-weight: 400;
 }
 
-a {
+a, .header-nav-mobile ul li:last-of-type span {
   font-family: "Manrope", sans-serif;
   font-weight: 500;
 }
@@ -244,9 +244,13 @@ a.second-card-btn:hover {
 }
 
 .header {
-  padding-top: 40px;
-  margin-bottom: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   line-height: 1;
+  z-index: 999;
+  position: fixed;
+  width: 100%;
+  background-color: #ffffff;
 }
 
 .header .header-row {
@@ -323,9 +327,125 @@ a.second-card-btn:hover {
   color: #4d77ff;
 }
 
+.menu-burger {
+  display: none;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  margin-left: auto;
+  cursor: pointer;
+}
+
+/*Inactive Menu Burger*/
+.menu-burger span {
+  width: 30px;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: #4d77ff;
+  border-radius: 5px;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+.menu-burger span:nth-of-type(2) {
+  top: calc(50% - 5px);
+}
+
+.menu-burger span:nth-of-type(3) {
+  top: calc(50% + 5px);
+}
+
+/*Active Menu Burger*/
+.menu-burger.active span:first-of-type {
+  -webkit-transform: translateX(1000%);
+          transform: translateX(1000%);
+}
+
+.menu-burger.active span:nth-of-type(2) {
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.menu-burger.active span:nth-of-type(3) {
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+          transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+/*Header Navbar Mobile*/
+.header-nav-mobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  position: fixed;
+  top: 80px;
+  left: 0;
+  width: 100%;
+  height: 250px;
+  background-color: #ffffff;
+  z-index: 900;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+          box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+.header-nav-mobile ul li + li {
+  margin-top: 20px;
+}
+
+.header-nav-mobile ul li:last-of-type span {
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  padding: 0 3px;
+}
+
+.header-nav-mobile ul a {
+  color: #4d77ff;
+  position: relative;
+  -webkit-transition: color .25s ease;
+  transition: color .25s ease;
+}
+
+.header-nav-mobile ul a::after {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  height: 2px;
+  width: 0;
+  background-color: #4d77ff;
+  -webkit-transition: width .25s ease;
+  transition: width .25s ease;
+}
+
+.header-nav-mobile ul a:hover::after {
+  width: 100%;
+}
+
+.header-nav-mobile.active {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
 .home {
   position: relative;
   min-height: 590px;
+  margin-top: 80px;
   padding-top: 75px;
   padding-bottom: 75px;
 }
@@ -999,6 +1119,9 @@ a.second-card-btn:hover {
 }
 
 @media only screen and (max-width: 992px) {
+  .menu-burger {
+    display: unset;
+  }
   /* Header */
   .header-row .header-nav,
   .header-row .header-login {
@@ -1217,6 +1340,10 @@ a.second-card-btn:hover {
 }
 
 @media only screen and (max-width: 320px) {
+  /*Header*/
+  .header-logo {
+    margin-right: 10px;
+  }
   /* Home Section */
   .home-content {
     text-align: center;
@@ -1277,5 +1404,24 @@ a.second-card-btn:hover {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+}
+
+@media (orientation: landscape) and (max-height: 400px) {
+  .header-nav-mobile {
+    height: 80px;
+  }
+  .header-nav-mobile ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .header-nav-mobile ul li + li {
+    margin-top: 0px;
+    margin-left: 20px;
   }
 }
