--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,7 +1,11 @@
 .header{
-    padding-top: 40px;
-    margin-bottom: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     line-height: 1;
+    z-index: 999;
+    position: fixed;
+    width: 100%;
+    background-color: $white;
     .header-row{
         display:flex;
         align-items: center;
